--- a/home/templates/home/contribution_tips.html
+++ b/home/templates/home/contribution_tips.html
@@ -7,14 +7,8 @@ Tips for Contributing to Outreachy Internship Projects
 {% block content %}
 {% include "home/snippet/eligibility_prompts.html" %}
 
-<p><a href="/apply/">Why apply to Outreachy?</a> &gt;
-{% if role.needs_application %}
-	<a href="{% url 'eligibility' %}">Start your initial application</a>
-{% elif role.needs_review %}
-	<a href="{% url 'eligibility-results' %}">Review your initial application</a>
-{% else %}
-	<a href="/apply/eligibility/">Outreachy Eligibility Rules</a>
-{% endif %}
+<p><a href="/apply/">Why apply to Outreachy?</a>
+&gt; <a href="/apply/eligibility/">Outreachy Eligibility Rules</a>
 &gt; <a href="/apply/project-selection/">Find a Mentor and Internship Project</a>
 &gt; Contribution Tips</p>
 
