--- a/home/templates/home/round_page.html
+++ b/home/templates/home/round_page.html
@@ -6,14 +6,8 @@
 
 {% block content %}
 
-<p><a href="/apply/">Why apply to Outreachy?</a> &gt;
-{% if role.needs_application %}
-	<a href="{% url 'eligibility' %}">Start your initial application</a>
-{% elif role.needs_review %}
-	<a href="{% url 'eligibility-results' %}">Review your initial application</a>
-{% else %}
-	<a href="/apply/eligibility/">Outreachy Eligibility Rules</a>
-{% endif %}
+<p><a href="/apply/">Why apply to Outreachy?</a>
+&gt; <a href="/apply/eligibility/">Outreachy Eligibility Rules</a>
 &gt; <a href="/apply/project-selection/">Find a Mentor and Internship Project</a>
 &gt; Past Outreachy Rounds</a>
 </p>
