Fix link to community projects on project selection page in promotion prompt

--- a/home/templates/home/snippet/project_promotion.html
+++ b/home/templates/home/snippet/project_promotion.html
@@ -1,6 +1,6 @@
 <p>After the Outreachy initial application period opens on {{ current_round.initial_applications_open }}, you can promote this project to applicants by linking to the community projects list:</p>
 
-<p><a href="{% url 'project-selection' %}"><pre>{{ request.scheme }}://{{ request.get_host }}{% url 'project-selection' %}#{{ community.slug }}</pre></a></p>
+<p><a href="{% url 'project-selection' %}#{{ community.slug }}"><pre>{{ request.scheme }}://{{ request.get_host }}{% url 'project-selection' %}#{{ community.slug }}</pre></a></p>
 
 <p>Once you have started work with an applicant on a contribution, you should remind them to record their in-progress contributions at this URL:</p>
 <p>{{ request.scheme }}://{{ request.get_host }}{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}</p>
