Display eligibility prompts from pingnew to internannounce
This gives people some time to see both the "applications haven't
started yet" and the "it's too late" messages.

Also this removes the last consumers of appsopen. yay!

--- a/home/templates/home/contribution_tips.html
+++ b/home/templates/home/contribution_tips.html
@@ -57,6 +57,6 @@ While only one contribution is required to be considered for the program, we fin
 Don't forget this next step! You need to make sure to go back to the community page (linked from the <a href="/apply/project-selection/">projects list for the current round</a>), find the project you've contributed to, and click the 'Record Contributions' button.
 </p>
 <p>
-Only appicants who make and record a contribution will be eligible to be selected as an intern. Applicants also need to submit their final application. The prompt to add an application will appear on your contributions page after you make at least one contribution.
+Only applicants who make and record a contribution will be eligible to be selected as an intern. Applicants also need to submit their final application. The prompt to add an application will appear on your contributions page after you make at least one contribution.
 </p>
 {% endblock %}
