Fix condition for cfp_closed_warning
This reverts "Fix test for when the contribution period is open.",
commit f6c8ac380dfb83176646bf4ab9d8c8380a29c5ae, because the test was
catching a real bug.

--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -68,7 +68,7 @@ Call for Outreachy community coordinators and mentors
 
 	{% if approved_communities or pending_communities %}
 		<h2>Mentor for a Participating FOSS Community</h2>
-		{% if current_round.project_soft_deadline %}
+		{% if current_round.project_soft_deadline.has_passed %}
 			{% include "home/snippet/cfp_closed_warning.html" %}
 		{% else %}
 			<p>Outreachy internships run twice a year. You can look at community and project listing <a href="{% url 'past-rounds' %}">from all past Outreachy rounds</a> to understand what types of internships Outreachy typically offers.</p>
